Fixed Item specific dispenser functions